welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:16: error: not found: value c
    faireV(c)
           ^